refactor(lading): group the buttons

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <body>
     <header>
         <img src="" alt="">
-        <a href="" class="btn">Lorem, ipsum.</a>
-        <a href="" class="btn">Illo, dolorem!</a>
-        <a href="" class="btn">Rem, quos!</a>
-        <a href="" class="btn">Nostrum, cum.</a>
-        <a href="" class="btn">Eos, ut?</a>
+        <div class="btnGrp">
+            <a href="" class="btn">Lorem, ipsum.</a>
+            <a href="" class="btn">Illo, dolorem!</a>
+            <a href="" class="btn">Rem, quos!</a>
+            <a href="" class="btn">Nostrum, cum.</a>
+            <a href="" class="btn">Eos, ut?</a>
+        </div>
     </header>
 </body>
 </html>
